--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -146,7 +146,11 @@ h5{
   margin-top: 0;
 }
 
-
+.gridStyle {
+    border: 1px solid rgb(212,212,212);
+    width: 1000px;
+    height: 300px
+}
 /*
  * Placeholder dashboard ideas
  */
