--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -148,7 +148,8 @@ h5{
 
 .gridStyle {
     border: 1px solid rgb(212,212,212);
-    width: 1000px;
+    font-size: 12px;
+    width: 1500px;
     height: 300px
 }
 /*
