--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -35,7 +35,10 @@ h5{
 	text-align:center;
 }
 
-
+.carousel{
+  width: 300px;
+  height: 300px;
+}
 .navbar-brand{
 	padding:5px 5px 5px 5px;
 	font-size:25px;
